--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -210,7 +210,7 @@ lyrics_4 : "ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴀɴᴅ
 
 #Ping
 ping_1 : "» ᴩɪɴɢɪɴɢ ᴍʏ ʟᴏᴠᴇ 🥀..."
-ping_2 : "**» ᴘᴏɴɢ ᴍʏ ʟᴏᴠᴇ 🥂 «**\n`🥂 {0} ᴍs`\n\n<b><u>{1} sʏsᴛᴇᴍ sᴛᴀᴛs :</u></b>\n\n🥀 ᴜᴩᴛɪᴍᴇ : {2} \n🥀 ʀᴀᴍ : {3} \n🥀 ᴄᴩᴜ : {4} \n🥀 ᴅɪsᴋ : {5} \n🥀 ᴩʏ-ᴛɢᴄᴀʟʟs : `{6} ᴍs`\n🥀 **ᴘᴏᴡᴇʀᴇᴅ ʙʏ** : @theupdatechannel_143 "
+ping_2 : "**» ᴘᴏɴɢ ᴍʏ ʟᴏᴠᴇ 🥂 «**\n`🥂 {0} ᴍs`\n\n<b><u>{1} sʏsᴛᴇᴍ sᴛᴀᴛs :</u></b>\n\n🥀 ᴜᴩᴛɪᴍᴇ : {2} \n🥀 ʀᴀᴍ : {3} \n🥀 ᴄᴩᴜ : {4} \n🥀 ᴅɪsᴋ : {5} \n🥀 ᴩʏ-ᴛɢᴄᴀʟʟs : `{6} ᴍs`\n🥀 **ᴘᴏᴡᴇʀᴇᴅ ʙʏ** : [𝗙𝗔𝗜𝗥𝗬 𝗡𝗘𝗧𝗪𝗢𝗥𝗞✨🥀](https://t.me/theupdatechannel_143) "
 
 # Song
 song_1 : "ʏᴏᴜ ᴄᴀɴ ᴅᴏᴡɴʟᴏᴀᴅ ᴍᴜsɪᴄ ᴏʀ ᴠɪᴅᴇᴏ ꜰʀᴏᴍ ʏᴏᴜᴛᴜʙᴇ ᴏɴʟʏ ɪɴ ᴘʀɪᴠᴀᴛᴇ ᴄʜᴀᴛ. ᴘʟᴇᴀsᴇ sᴛᴀʀᴛ ᴍᴇ ɪɴ ᴘʀɪᴠᴀᴛᴇ ᴄʜᴀᴛ."
